refactored the index page to use config.yaml better. added video to V&A project and refactored template one to accept videos.

--- a/_includes/project_image_browser_screenshot.html
+++ b/_includes/project_image_browser_screenshot.html
@@ -1,3 +1,7 @@
-<div class="project browser-screenshot">
-  {% include picturefill.html file="browser-screenshot" %}
+<div class="project browser-screenshot {% if page.video %}video{% endif %}">
+  {% if page.video %}
+  	<iframe src="//player.vimeo.com/video/50008240" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+  {% else %}
+  	{% include picturefill.html file="browser-screenshot" %}
+  {% endif %}
 </div>
