--- a/_includes/homepage_picturefill.html
+++ b/_includes/homepage_picturefill.html
@@ -1,3 +1,3 @@
-<a href="{{ include.file }}" title="{{ incliude.file }}">
+<a href="{{ project.directory }}" title="{{ project.title }}">
   {% include picturefill.html %}
 </a>
