--- a/_includes/project_image_two.html
+++ b/_includes/project_image_two.html
@@ -1,3 +1,7 @@
-<div class="project project-image-two">
-  {% include picturefill.html file="img2" %}
+<div class="project project-image-two {% if page.video %}video{% endif %}">
+  {% if page.video %}
+  	<iframe src="//player.vimeo.com/video/50008240" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+  {% else %}
+  	{% include picturefill.html file="img2" %}
+  {% endif %}
 </div>
