--- a/_layouts/project_template_one.html
+++ b/_layouts/project_template_one.html
@@ -1,11 +1,12 @@
 ---
 layout: project
+class: "projectpage template-one"
 ---
 
 {% include project_description.html %}
 
 {% include project_image_one.html %}
 
-{% include project_image_browser_screenshot.html %}
+{% include project_image_two.html %}
 
 {% include project_image_three.html %}
