--- a/assets/style.scss
+++ b/assets/style.scss
@@ -265,15 +265,27 @@ footer h2 {
   height: auto;
 }
 
-.projectpage .browser-screenshot {
+.template-one .img2 {
   width: 100%;
   height: auto;
+}
+
+.project-image-two iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .projectpage .project-image-three,
 .projectpage .project-image-two {
   width: 504px;
   height: auto;
+}
+
+.template-one .project-image-two {
+  width: 750px;
 }
 
 /* first project only - the big header image on every screen */
@@ -387,7 +399,6 @@ body > .project {
   .projectpage .project-image-one,
   .projectpage .project-image-two,
   .projectpage .project-image-three,
-  .projectpage .browser-screenshot,
   .description {
     width: 100%;
     height: auto;
@@ -417,7 +428,6 @@ body > .project {
   h1 {
     margin-left: $standardSpacing;
   }
-
 }
 
 @media screen and (min-width: 750px) and (max-width: 1007px) {
@@ -460,10 +470,6 @@ body > .project {
     height: auto;
   }
 
-  .browser-screenshot {
-    width: 100%;
-    height: auto;
-  }
 }
 
 @media screen and (max-width: 1007px) {
@@ -483,6 +489,14 @@ body > .project {
     footer p {
       margin-top: 16px;
       font-weight: 400;
+    }
+
+    .template-one .project-image-two {
+      width: 100%;
+    }
+
+    .template-one .project-image-two.video {
+      padding-bottom: 56.35%;
     }
 }
 
@@ -555,5 +569,8 @@ body > .project {
     float: right;
   }
 
+  .project-image-two.video {
+    height: 422px;
+  }
   
 }
