Refactored how the homepage is built and how new projects are added to the site. The homepage is now entirely automated. All that is required to add a new project to the site is to add a directory containing the project images and an index.html file with the front-matter describing the project. See the updated README for step-by-step instructions for doing this.

--- a/_includes/homepage_picturefill.html
+++ b/_includes/homepage_picturefill.html
@@ -1,3 +1,3 @@
-<a href="{{ project.directory }}" title="{{ project.title }}">
+<a href="{{ p.path | remove:'/index.html' }}" title="{{ p.title }}">
   {% include picturefill.html %}
 </a>
