--- a/_includes/picturefill.html
+++ b/_includes/picturefill.html
@@ -1,20 +1,40 @@
-<div data-picture data-alt="{{ page.title }}">
-  <div data-src="{{ site.baseurl }}/img/{{ page.path | remove:'/index.html' }}/{{ project.directory }}.jpg"></div>
-
   {% comment %}
       images on the home page need to scale up from 168 to about 375, so we load in the largest size
   {% endcomment %}
   
-  {% if page.path == 'home' and include.area == "header" %}
-    <div data-src="{{ site.baseurl }}/{{ project.directory }}/{{ project.directory }}_m.jpg" data-media="(max-width:600px)"></div>
-    <div data-src="{{ site.baseurl }}/{{ project.directory }}/{{ project.directory }}.jpg" data-media="(max-width:600px) and (-webkit-min-device-pixel-ratio: 2.0)"></div>
-    <div data-src="{{ site.baseurl }}/{{ project.directory }}/{{ project.directory }}.jpg" data-media="(min-width:601px)"></div>
-    <div data-src="{{ site.baseurl }}/{{ project.directory }}/{{ project.directory }}.jpg" data-media="(min-width: 1008px)"></div>
-    <div data-src="{{ site.baseurl }}/{{ project.directory }}/{{ project.directory }}.jpg" data-media="(min-width: 1008px) and (-webkit-min-device-pixel-ratio: 2.0)"></div>
-  {% elsif page.path == 'home' %}
-    <div data-src="{{ site.baseurl }}/{{ project.directory }}/{{ project.directory }}.jpg" data-media="(max-width:600px)"></div>
-    <div data-src="{{ site.baseurl }}/{{ project.directory }}/{{ project.directory }}.jpg" data-media="(min-width:601px)"></div>
+  {% comment %}
+    This first data-src tag is the one that browsers who don't support media queries will get.
+  {% endcomment %}
+  {% if page.path == 'home' %}
+    <div data-picture data-alt="{{ p.title }}">
+    <div data-src="/{{ p.path | remove:'/index.html' }}/homepage.jpg"></div>
   {% else %}
+    <div data-picture data-alt="{{ page.title }}">
+    <div data-src="/{{ page.path | remove:'/index.html' }}/homepage.jpg"></div>
+  {% endif %}
+
+  {% comment %}
+    This section deals with 
+  {% endcomment %}
+  {% if page.path == 'home' and include.area == "header" %}
+    <div data-src="/{{ p.path | remove:'/index.html' }}/homepage_m.jpg" data-media="(max-width:600px)"></div>
+    <div data-src="/{{ p.path | remove:'/index.html' }}/homepage.jpg" data-media="(max-width:600px) and (-webkit-min-device-pixel-ratio: 2.0)"></div>
+    <div data-src="/{{ p.path | remove:'/index.html' }}/homepage.jpg" data-media="(min-width:601px)"></div>
+    <div data-src="/{{ p.path | remove:'/index.html' }}/homepage.jpg" data-media="(min-width: 1008px)"></div>
+    <div data-src="/{{ p.path | remove:'/index.html' }}/homepage.jpg" data-media="(min-width: 1008px) and (-webkit-min-device-pixel-ratio: 2.0)"></div>
+  {% elsif page.path == 'home' %}
+
+    {% comment %}
+      This section deals with the standard square project images on the homepage
+    {% endcomment %}
+    <div data-src="/{{ p.path | remove:'/index.html' }}/homepage.jpg" data-media="(max-width:600px)"></div>
+    <div data-src="/{{ p.path | remove:'/index.html' }}/homepage.jpg" data-media="(min-width:601px)"></div>
+  
+  {% else %}
+
+    {% comment %}
+      This section deals with all images on project pages
+    {% endcomment %}
     <div data-src="{{ include.file }}_m.jpg" data-media="(max-width:600px)"></div>
     <div data-src="{{ include.file }}.jpg" data-media="(max-width:600px) and (-webkit-min-device-pixel-ratio: 2.0)"></div>
     <div data-src="{{ include.file }}.jpg" data-media="(min-width:601px)"></div>
@@ -23,6 +43,11 @@
   {% endif %}
 
   <noscript>
-    <img src="{{ site.baseurl }}/{{ project.directory }}/{{ project.directory }}.jpg" alt="{{ page.title }}">
+    {% if page.path == 'home' %}    
+      <img src="/{{ p.path | remove:'/index.html' }}/{{ p.path | remove:'/index.html' }}.jpg" alt="{{ p.title }}">
+    {% else %}
+      <img src="/{{ page.path | remove:'/index.html' }}/{{ page.path | remove:'/index.html' }}.jpg" alt="{{ page.title }}">
+    {% endif %}      
   </noscript>
+  
 </div>
