--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,11 +4,12 @@
   <title>suki rai &mdash; {{ page.title }}</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-  <link href="{{ site.baseurl }}/css/style.css" media="screen" rel="stylesheet" type="text/css" />
+  <link href="/css/style.css" media="screen" rel="stylesheet" type="text/css" />
   <!--[if IE]>
-    <link href="{{ site.baseurl }}/css/ie.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="/css/ie.css" media="screen" rel="stylesheet" type="text/css" />
   <![endif]-->
-  <script src="{{ site.baseurl }}/js/js.js" type="text/javascript"></script>
+  <script src="/js/js.js" type="text/javascript"></script>
+  <link rel="author" href="humans.txt" />
 </head>
   
 <body class="{{ page.class }}">
