updated all small-screen header images with new versions. added license and blog links to footer. amended homepage font sizes. AGAIN.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,16 @@
         <p><a href="http://twitter.com/miscondukt">@miscondukt</a></p>
       </div>
 
+      <div>
+        <h2>/blog</h2>
+        <p><a href="http://miscondukt.tumblr.com/">The privilege of being a woman</a></p>
+      </div>
+
+      <div>
+        <h2>/license</h2>
+        <p><a href="/about">about</a></p>
+      </div>
+
       <div style="clear:both;float: none;"></div>
     </div>
   </footer>
