--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,7 @@ header p {
   margin-top: 12px; }
 
 .project .info p:nth-child(2) {
-  font-size: 24px;
+  font-size: 22px;
   line-height: 1em;
   font-weight: 400;
   margin-top: 5px; }
@@ -178,11 +178,6 @@ footer a:active {
 
 footer h2 {
   font-weight: 300; }
-
-#footer-inner div:nth-of-type(3) {
-  clear: left;
-  display: block;
-  width: auto; }
 
 /* Project pages */
 .description {
@@ -312,12 +307,18 @@ body > .project {
     height: auto; }
 
   .description {
-    padding: 2.5%; } }
+    padding: 2.5%; }
+
+  #footer-inner div {
+    margin-bottom: 48px; }
+
+  #footer-inner div:nth-child(3),
+  #footer-inner div:nth-child(4) {
+    margin-bottom: 9px; } }
 @media screen and (min-width: 750px) {
   #footer-inner div {
     float: left;
-    margin-left: 0.25em;
-    width: 295px; }
+    width: 33%; }
 
   /* calculate required number of copy lines * their font sizes + any leading + any padding */
   .project .info {
@@ -327,7 +328,10 @@ body > .project {
     padding: 2.5%; }
 
   h1 {
-    margin-left: 9px; } }
+    margin-left: 9px; }
+
+  #footer-inner div:nth-of-type(3) {
+    text-align: right; } }
 @media screen and (min-width: 750px) and (max-width: 1007px) {
   #container,
   #header-inner,
@@ -426,9 +430,6 @@ body > .project {
   footer p {
     margin-top: 8px;
     font-weight: 400; }
-
-  #footer-inner div:nth-of-type(2) {
-    margin-left: 54px; }
 
   .description {
     width: 504px;
