changed 'about' to 'license' to be more specific

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,8 +13,8 @@
       </div>
 
       <div>
-        <h2>/license</h2>
-        <p><a href="/about">about</a></p>
+        <h2>/about</h2>
+        <p><a href="/license">license</a></p>
       </div>
 
       <div style="clear:both;float: none;"></div>
