--- a/_includes/picturefill.html
+++ b/_includes/picturefill.html
@@ -5,8 +5,13 @@
   {% comment %}
     This first data-src tag is the one that browsers who don't support media queries will get.
   {% endcomment %}
+
   {% if page.path == 'home' %}
-    <div data-picture data-alt="{{ p.title }}">
+    <img class="ximg" src="/img/X.svg" />
+  {% endif %}
+
+  {% if page.path == 'home' %}
+    <div class="x" data-picture data-alt="{{ p.title }}">  
     <div data-src="/{{ p.path | remove:'/index.html' }}/homepage.jpg"></div>
   {% else %}
     <div data-picture data-alt="{{ page.title }}">
@@ -17,11 +22,11 @@
     This section deals with the header image on the homepage
   {% endcomment %}
   {% if page.path == 'home' and include.area == "header" %}
-    <div data-src="/{{ p.path | remove:'/index.html' }}/homepage_m.jpg" data-media="(max-width:600px)"></div>
-    <div data-src="/{{ p.path | remove:'/index.html' }}/homepage.jpg" data-media="(max-width:600px) and (-webkit-min-device-pixel-ratio: 2.0)"></div>
-    <div data-src="/{{ p.path | remove:'/index.html' }}/homepage.jpg" data-media="(min-width:601px)"></div>
-    <div data-src="/{{ p.path | remove:'/index.html' }}/homepage.jpg" data-media="(min-width: 1008px)"></div>
-    <div data-src="/{{ p.path | remove:'/index.html' }}/homepage.jpg" data-media="(min-width: 1008px) and (-webkit-min-device-pixel-ratio: 2.0)"></div>
+    <div data-src="/{{ p.path | remove:'/index.html' }}/homepage_header_m.jpg" data-media="(max-width:600px)"></div>
+    <div data-src="/{{ p.path | remove:'/index.html' }}/homepage_header.jpg" data-media="(max-width:600px) and (-webkit-min-device-pixel-ratio: 2.0)"></div>
+    <div data-src="/{{ p.path | remove:'/index.html' }}/homepage_header.jpg" data-media="(min-width:601px)"></div>
+    <div data-src="/{{ p.path | remove:'/index.html' }}/homepage_header.jpg" data-media="(min-width: 1008px)"></div>
+    <div data-src="/{{ p.path | remove:'/index.html' }}/homepage_header.jpg" data-media="(min-width: 1008px) and (-webkit-min-device-pixel-ratio: 2.0)"></div>
   
   {% comment %}
     This section deals with the header image on project pages
