--- a/css/style.css
+++ b/css/style.css
@@ -227,6 +227,16 @@ body > .project {
   margin-top: 13px;
   line-height: 19px; }
 
+.ximg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: none;
+  background-image: url(../img/glitch.gif); }
+
+.project a:hover .ximg {
+  display: block; }
+
 /* SMALL SCREENS */
 /*****************/
 @media screen and (max-width: 600px) {
@@ -238,6 +248,11 @@ body > .project {
     height: 180px;
     margin-left: -150%;
     margin-right: -150%; }
+
+  body > .project img.ximg {
+    margin: auto;
+    width: 100%;
+    height: 100%; }
 
   .description {
     text-align: left;
@@ -253,7 +268,12 @@ body > .project {
     height: 360px;
     width: 1200px;
     margin-left: -150%;
-    margin-right: -150%; } }
+    margin-right: -150%; }
+
+  body > .project img.ximg {
+    margin: auto;
+    width: 100%;
+    height: 100%; } }
 @media screen and (max-width: 749px) {
   .project .info {
     min-height: 130px; }
@@ -400,6 +420,9 @@ body > .project {
 
   body > .project img {
     max-width: 1200px; }
+
+  body > .project img.ximg {
+    max-width: none; }
 
   .project:nth-of-type(7),
   .project:nth-of-type(8),
