removed homepage glitch hover state on touch devices. amended client name on RCA project.

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -303,7 +303,7 @@ body > .project {
   background-image: url(../img/glitch.gif);
 }
 
-.project a:hover .ximg { 
+.no-touch .project a:hover .ximg { 
   display: block;
 }
 
