--- a/assets/style.scss
+++ b/assets/style.scss
@@ -13,6 +13,7 @@ $textColorFour: #aaa;
 
 /* Global Reset */
 * { 
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -300,7 +301,7 @@ body > .project {
   top: 0;
   left: 0;
   display: none;
-  background-image: url(../img/glitch.gif);
+  background-image: url(../img/glitch2.gif);
 }
 
 .no-touch .project a:hover .ximg { 
