adding two new projects and an amended homepage layout

--- a/_includes/project_description.html
+++ b/_includes/project_description.html
@@ -7,5 +7,8 @@
     {% if page.link %}
     	<p class="link"><b><a href="{{ page.link }}">{{ page.linktext }}</a></b></p>
     {% endif %}
+    {% if page.link2 %}
+    	<p class="link"><b><a href="{{ page.link2 }}">{{ page.linktext2 }}</a></b></p>
+    {% endif %}
   </div>
 </div>
